<resources>
    <string name="app_name">LuxCar</string>

<!--    ADMIN-->
    <string name="admin_menu_user">User</string>
    <string name="admin_menu_brand">Brand</string>
    <string name="admin_menu_car">Car</string>
    <string name="admin_menu_warehouse">Warehouse</string>
    <string name="admin_menu_changePass">Change Password</string>
    <string name="admin_menu_logout">Log out</string>
    <string name="admin_menu_open">Open tools</string>
    <string name="admin_menu_close">Close tools</string>
    <string name="validateName">Please enter name</string>
    <string name="validatePhone">Please enter correct phone number</string>
    <string name="validateEmail">Please enter correct email</string>
    <string name="validatePassword">Please enter password</string>
    <string name="validateRepeatPass">Password not match</string>
    <string name="validateAddress">Please enter address</string>
    <string name="validateDob">Please enter Birthday</string>
    <string name="open">open</string>
    <string name="colse">close</string>


</resources>